Jordan check ff
Jordan pas de text in je activity aan naar je strings file

--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">CustomerApp</string>
+
+    <!-- Strings voor HomeScreen activity -->
+
+    <!-- Strings voor InlogScherm activity -->
 </resources>
