--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">CustomerApp</string>
 
-    <!-- Strings voor HomeScreen activity -->
+    <!-- Strings voor HomeScreenActivity activity -->
 
     <!-- Strings voor InlogScherm activity -->
 </resources>
