Re-added OrderDetailActivity
Class-within-class bug should be fixed now

--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -59,18 +59,10 @@
 
 
     <!--String voor OrderDetailActivity-->
-    <string name="total_tag_textview">
-        Totaal:
-    </string>
-    <string name="TEST_total_price_textview">
-        €15,55
-    </string>
-    <string name="cancel_order_button">
-        Bestelling annuleren
-    </string>
-    <string name="scan_order_button">
-        Scannen
-    </string>
+    <string name="total_tag_textview">Totaal: </string>
+    <string name="TEST_total_price_textview">€15,55</string>
+    <string name="cancel_order_button">Bestelling annuleren</string>
+    <string name="scan_order_button">Scannen</string>
 
     <!-- Strings voor OrderActivity-->
 
