--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -53,18 +53,31 @@
     </string>
 
     <!-- Strings voor MyAccountActivity-->
-
+    <string name="date_textview">
+        Datum:
+    </string>
+    <string name="price_textview">
+        Prijs:
+    </string>
 
     <!-- Strings voor MyOrdersActivity-->
 
 
     <!--String voor OrderDetailActivity-->
-    <string name="total_tag_textview">Totaal: </string>
-    <string name="TEST_total_price_textview">€15,55</string>
-    <string name="cancel_order_button">Bestelling annuleren</string>
-    <string name="scan_order_button">Scannen</string>
+    <string name="total_tag_textview">
+        Totaal:
+    </string>
+    <string name="TEST_total_price_textview">
+        €15,55
+    </string>
+    <string name="cancel_order_button">
+        Bestelling annuleren
+    </string>
+    <string name="scan_order_button">
+        Scannen
+    </string>
 
-    <!-- Strings voor OrderActivity-->
+    <!-- Strings voor OrderHistoryActivity-->
 
 
     <!-- Strings voor WalletActivity-->
