--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -62,15 +62,28 @@
 
     <!-- Strings voor MyOrdersActivity-->
 
-    
+
     <!--Strings voor OrderDetailActivity-->
-    <string name="total_tag_textview">Totaal: </string>
-    <string name="TEST_total_price_textview">€15,55</string>
-    <string name="cancel_order_button">Bestelling annuleren</string>
-    <string name="scan_order_button">Scannen</string>
+    <string name="total_tag_textview">
+        Totaal:
+    </string>
+    <string name="TEST_total_price_textview">
+        €15,55
+    </string>
+    <string name="cancel_order_button">
+        Bestelling annuleren
+    </string>
+    <string name="scan_order_button">
+        Scannen
+    </string>
 
     <!-- Strings voor OrderHistoryActivity-->
-
+    <string name="date_of_the_order_textview">
+        Datum:
+    </string>
+    <string name="price_of_the_order_textview">
+        Prijs:
+    </string>
 
     <!-- Strings voor WalletActivity-->
     <string name="go_to_add_balance_button">
@@ -81,6 +94,10 @@
     </string>
 
     <!--Strings voor RefundActivity-->
-    <string name="current_balance_header">Huidig saldo:</string>
-    <string name="example_balance">€52,50</string>
+    <string name="current_balance_header">
+        Huidig saldo:
+    </string>
+    <string name="example_balance">
+        €52,50
+    </string>
 </resources>
