--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -96,8 +96,15 @@
     <!--Strings voor RefundActivity-->
     <string name="current_balance_header">
         Huidig saldo:
+    </string>\
+    <string name="refund_button_text">
+        Terugstorten
     </string>
+
     <string name="example_balance">
         €52,50
+    </string>
+    <string name="example_refund_text">
+        Enter refund-value here
     </string>
 </resources>
