--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -83,4 +83,12 @@
     <!--Strings voor RefundActivity-->
     <string name="current_balance_header">Huidig saldo:</string>
     <string name="example_balance">€52,50</string>
+
+
+    <!-- Strings voor ScanActivity -->
+    <string name="scan_device">Plaats uw apparaat bij de scanner</string>
+    <string name="scan_device_done">Uw bestelling is succesvol afgerond</string>
+    <string name="scan_activity_button">Menu</string>
 </resources>
+
+
