--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -113,10 +113,15 @@
     </string>
 
     <!-- Strings voor ScanActivity -->
-    <string name="scan_device">Plaats uw apparaat bij de scanner</string>
-    <string name="scan_device_done">Uw bestelling is succesvol afgerond</string>
-    <string name="scan_activity_button">Menu</string>
-
+    <string name="scan_device">
+        Plaats uw apparaat bij de scanner
+    </string>
+    <string name="scan_device_done">
+        Uw bestelling is succesvol afgerond
+    </string>
+    <string name="scan_activity_button">
+        Menu
+    </string>
 </resources>
 
 
