More refund logic.

--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -137,8 +137,11 @@
     <string name="refund_button_clicked_toast">
         Refund balance clicked
     </string>
+    <string name="euro_symbol">
+        €
+    </string>
     <string name="example_balance">
-        €52,50
+        52.50
     </string>
     <string name="example_refund_text">
         Enter refund-value here
