Strings file bijgewerkt, ik hou die file wel bij
Beter dat 1 iemand het doet zodat het gestructureerd blijft en er niet
merges komen en dat er niets vergeten wordt of dat er per activity over
een string heengekeken wordt

--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -80,12 +80,28 @@
     </string>
 
     <!-- Strings voor MyAccountActivity-->
-    <string name="date_textview">
-        Datum:
+    <string name="personal_data_textview">
+        Persoonlijke gegevens
     </string>
-    <string name="price_textview">
-        Prijs:
+    <string name="email_textview">
+        Email:
     </string>
+    <string name="firstname_textview">
+        Voornaam:
+    </string>
+    <string name="lastname_textview">
+        Achternaam:
+    </string>
+    <string name="age_textview">
+        Leeftijd:
+    </string>
+    <string name="balance_information_button">
+        Saldo-informatie
+    </string>
+    <string name="order_history_button">
+        Bestelgeschiedenis
+    </string>
+
 
     <!-- Strings voor MyOrdersActivity-->
 
