--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
+    <!-- Global strings -->
     <string name="app_name">CustomerApp</string>
+    <string name="test_product">
+        Dummy data test
+    </string>
 
     <!-- Strings voor HomeScreenActivity activity -->
     <string name="order_button">
@@ -101,10 +105,6 @@
     <string name="order_history_button">
         Bestelgeschiedenis
     </string>
-
-
-    <!-- Strings voor MyOrdersActivity-->
-
 
     <!--Strings voor OrderDetailActivity-->
     <string name="total_tag_textview">
