--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -41,14 +41,8 @@
     <string name="successful_log_in_toast">
         Succesvol ingelogd
     </string>
-    <string name="wrong_email_toast">
-        Email adres incorrect, probeer opnieuw
-    </string>
-    <string name="wrong_password_toast">
-        Wachtwoord incorrect, probeer opnieuw
-    </string>
-    <string name="wrong_password_or_email_toast">
-        Onjuist email adres en/of wachtwoord
+    <string name="account_not_found_toast">
+        Account niet gevonden
     </string>
 
     <!-- Strings voor AddBalanceActivity-->
