--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -100,6 +100,9 @@
     <string name="age_textview">
         Leeftijd:
     </string>
+    <string name="iban_textview">
+        Rekeningnummer:
+    </string>
     <string name="language_textview">
         Taal:
     </string>
