--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
         €0,00
     </string>
     <string name="add_balance">
-        Saldo toevoegen:
+        Voer een bedrag in:
     </string>
     <string name="desired_balance">
         €0,00
