Eindeloze pogingen om de balanceactivity te fixen

--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
         €0,00
     </string>
     <string name="add_balance_button">
-        Toevoegen.
+        Toevoegen
     </string>
     <string name="no_amount_entered_toast">
         U heeft geen bedrag ingevoerd.
