--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -212,6 +212,7 @@
     <string name="Scan_toolbar">Betalen</string>
     <string name="Order_History_toolbar">Mijn Bestellingen</string>
     <string name="Settings_toolbar">Instellingen</string>
+    <string name="Unhandled_Order_toolbar">Open Bestelling</string>
 </resources>
 
 
