--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -193,8 +193,8 @@
     <string name="total_price_textview">
         €0,00
     </string>
-    <string name="pay">
-        Betalen
+    <string name="order_activity_orderButton">
+        Bestellen
     </string>
 
     <!-- Strings voor de aid_list -->
