--- a/EmployeeApp/app/src/main/res/values/strings.xml
+++ b/EmployeeApp/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="accept_button">
         Accepteer bestelling
     </string>
+    <string name="add_products_button">
+        Voeg producten toe
+    </string>
 </resources>
