--- a/EmployeeApp/app/src/main/res/values/strings.xml
+++ b/EmployeeApp/app/src/main/res/values/strings.xml
@@ -48,4 +48,9 @@
     <string name="add_products_button">
         Voeg producten toe
     </string>
+
+    <!-- Strings voor SearchOrderActivity-->
+    <string name="search_order_edit_text_hint">
+        Voer emailadres van klant in...
+    </string>
 </resources>
