Schermnamen goed gemaakt alles klopt nu

--- a/CustomerApp/app/src/main/res/values/strings.xml
+++ b/CustomerApp/app/src/main/res/values/strings.xml
@@ -257,5 +257,11 @@
     <string name="Unhandled_Order_toolbar">
         Open Bestelling
     </string>
+    <string name="handled_Order_toolbar">
+        Voltooide Bestelling
+    </string>
+    <string name="customer_app_toolbar">
+        CustomerApp
+    </string>
 
 </resources>
